Fix spacing by icon rather than queue position, fix number spacing from bottom for other footer buttons

--- a/public/assets/styl/components/player-controller.styl
+++ b/public/assets/styl/components/player-controller.styl
@@ -123,8 +123,8 @@
 						span
 							margin 0 .1rem
 							
-							&.queue-position
-								margin-left 0.3rem
+							&.icon-playlist
+								margin-right 0.3rem
 
 							&.queue-position-split
 								display none
@@ -139,7 +139,8 @@
 
 				.dub-counter
 					margin-left 0.5rem
-					display relative
+					display inline-block
+					position relative
 					top -0.1rem
 
 				.dubdown
